--- a/css/style.css
+++ b/css/style.css
@@ -9,10 +9,10 @@ audio, canvas, video { display: inline-block; *display: inline; *zoom: 1; }
 audio:not([controls]) { display: none; }
 [hidden] { display: none; }
 
-html { font-size: 100%; overflow-y: scroll; -webkit-text-size-adjust: 100%; -ms-text-size-adjust:100%; min-width:1000px; }
-body { background:#f9f6f4; color:#484848; margin: 0; font-family:Helvetica, "Open Sans", Arial, Verdana, Geneva, sans-serif; font-size:16px; font-weight:300; min-width:1000px; }
-button, input, select, textarea { color:#464646; }
-p { line-height:149%; margin:12px 0 22px; }
+html { font-size: 100%; overflow-y: scroll; -webkit-text-size-adjust: 100%; -ms-text-size-adjust:100%; }
+body { background:#f1efed; color:#000; margin: 0; font-family:"Lato", Helvetica, Arial, Verdana, Geneva, sans-serif; font-size:20px; font-weight:400; }
+button, input, select, textarea { color:#000; }
+p { line-height:136%; margin:1px 0 14px; }
 
 ::-moz-selection { background:#2B7FA6; color: #fff; text-shadow: none; }
 ::selection { background:#2B7FA6; color:#fff; text-shadow: none; }
@@ -23,7 +23,7 @@ a:focus { outline: thin dotted; }
 a:hover, a:active { outline: 0; }
 a:active, input.button:active { outline: 0; position: relative; top: 1px; }
 
-h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5,  h6, .h6 { font-weight:400 }
+h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5,  h6, .h6 { font-weight:700 }
 h1, .h1 { font-size:24px; margin:24px 0 14px }
 h2, .h2 { font-size:22px; margin:24px 0 14px }
 h3, .h3 { font-size:20px; margin:24px 0 14px }
@@ -73,12 +73,31 @@ input:invalid, textarea:invalid { background-color: #f0dddd; }
 table { border-collapse: collapse; border-spacing: 0; }
 td { vertical-align: top; }
 
-::-webkit-input-placeholder { color:#5D5D5D; }
-:-moz-placeholder { color:#5D5D5D; }
-::-moz-placeholder { color:#5D5D5D; }
-:-ms-input-placeholder { color:#5D5D5D; }
+::-webkit-input-placeholder { color:#b8b6b5; }
+:-moz-placeholder { color:#b8b6b5; }
+::-moz-placeholder { color:#b8b6b5; }
+:-ms-input-placeholder { color:#b8b6b5; }
 
 /* HEADER */
-
-
+#s-netflix { text-align: center; }
+#s { border: 1px solid #7c7877; font-size: 27px; margin: 39px 0 67px; padding: 16px 19px; width: 66.8%; -webkit-box-shadow: 0px 0px 20px 12px #e3dfdc; -moz-box-shadow: 0px 0px 20px 12px #e3dfdc; box-shadow: 0px 0px 20px 12px #e3dfdc; -webkit-border-radius: 2px; border-radius: 2px; -moz-border-radius: 2px; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
+#sort-movies { border-bottom: 1px dashed #7c7877; display: none; height: 27px; padding-bottom: 47px; text-align: left; }
+#sort-movies span { font-size: 21px; }
+#sort-movies label { font-size: 22px; margin-left: 11px; }
+#sort-movies input { margin-left: 17px; vertical-align: 2px; }
 /* PRINCIPAL */
+#main { padding-bottom: 108px; text-align: center; }
+.wrap { margin: 0 auto; max-width: 800px; padding: 0 10px }
+#movies { margin-bottom: 13px; }
+.movie { border-bottom: 1px dashed #7c7877; padding: 36px 0 25px; position: relative; text-align: left; }
+.movie:last-child { border: 0; }
+.movie-content { padding: 0 8px; }
+.movie-title { color: #abd0ce; font-size: 42px; margin: 0 0 2px; max-width: 80% }
+.movie-info { color: #7c7877; font-size: 21px; }
+.movie-subtitle { margin-bottom: 0; }
+.movie-cast .movie-subtitle { margin-top: 22px; }
+.movie-rating { height: 54px; position: absolute; right: 0; top: 40px; }
+.movie-rating p { color:#7c7877; float: left; font-size: 21px; line-height: 54px; margin: 0; vertical-align: middle; }
+.rating-value { background: #7c7877; color:#d9d4cf; float: left; height: 100%; line-height: 54px; margin-left: 5px; text-align: center; vertical-align: middle; width: 53px; -webkit-border-radius: 50%; border-radius: 50%; -moz-border-radius: 50%; }
+.show-more { background: #abd0ce; color: #fff; font-size: 18px; display: none; margin: 0 auto; padding: 16px 37px; -webkit-border-radius: 2px; border-radius: 2px; -moz-border-radius: 2px; -webkit-transition: all 0.3s ease-out; -moz-transition: all 0.3s ease-out; -ms-transition: all 0.3s ease-out; -o-transition: all 0.3s ease-out; transition: all 0.3s ease-out; }
+.show-more:hover { background: #0782EA; color: #fff; }
